# CrewForge

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  example.env  manage.py  pyproject.toml  run.sh  schema.yml  test.env
.github/: git-commit-instructions.md
.github/workflows/: django.yml
apps/accounts/: admin.py  choices.py  emails.py  settings.py  urls.py
apps/accounts/factories/: invitations.py  members.py  organizations.py  users.py
apps/accounts/filters/: files.py  invitation.py  members.py  organization.py
apps/accounts/management/commands/: expire_invites.py
apps/accounts/managers/: invitation.py  member.py  organization.py  user.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: __init__.py  invitation.py  member.py  organization.py  user.py
apps/accounts/permissions/: files.py  generics.py  invitation.py  member.py  organization.py
apps/accounts/serializers/: auth.py  files.py  invitation.py  member.py  mixins.py  organization.py  signup.py  user.py
apps/accounts/templates/accounts/emails/: base.html
apps/accounts/tests/: client.py  mixins.py  test_auth.py  test_invitations.py  test_members.py  test_organizations.py  test_signup.py
apps/accounts/validators/: user.py
apps/accounts/views/: auth.py  files.py  invitations.py  members.py  organizations.py  signup.py
apps/generics/: permissions.py
apps/generics/factories/: mixins.py
apps/generics/fields/: fields.py  relations.py
apps/generics/filters/: mixins.py
apps/generics/mails/: bases.py
apps/generics/managers/: querysets.py
apps/generics/mixins/: mixins.py
apps/generics/models/: abstracts.py
apps/generics/serializers/: choices.py  mixins.py
apps/generics/utils/: models.py  requests.py  schema.py  serializers.py  shortcuts.py
apps/generics/views/: mixins.py
apps/teams/: admin.py  choices.py  urls.py
apps/teams/factories/: team_members.py  teams.py
apps/teams/filters/: team.py  team_member.py
apps/teams/managers/: team.py  team_member.py
apps/teams/migrations/: 0001_initial.py
apps/teams/models/: team.py  team_member.py
apps/teams/permissions/: team.py  team_member.py
apps/teams/serializers/: team.py  team_member.py
apps/teams/tests/: test_team_members.py  test_teams.py
apps/teams/views/: team_members.py  teams.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py
docs/: architectural-patterns.md  behavioral-patterns.md  creational-patterns.md  structural-patterns.md
observability/: opentelemetry_config.py  otel-collector-config.yaml  prometheus.yml
static/js/rapidoc/: rapidoc-min.js
static/site/: site.webmanifest
templates/drf_spectacular/: swagger_ui.html
templates/emails/: base.html
templates/includes/: favicon.html
