[project]
name = "crew-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.3.1",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "django-extensions>=4.1",
    "djangorestframework-stubs>=3.16.8",
    "factory-boy>=3.3.3",
    "isort>=8.0.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
]

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", ".docker_venv", "migrations", "__pycache__"]
skip_glob = [
    "**/migrations/**",
    "**/__pycache__/**",
    "**/__init__.py",
    "**/.docker_venv/**",
    "**/.venv/**",
]
multi_line_output=3
include_trailing_comma=true
use_parentheses=true
known_django = ["django"]
known_third_party = ["rest_framework"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"
python_files = [
    "tests.py",
    "test_*.py",
    "*_test.py",
    "tests/**/*.py"
]

[tool.coverage.run]
branch = true
omit = [
    "*/commands/*",
    "*/tests/*",
    "*/__init__.py",
    "config/settings/local.py",
    "config/settings/production.py",
    "manage.py",
    "wsgi.py",
    "asgi.py"
]

[tool.coverage.report]
exclude_also = [
    "def __str__",
]
